NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libcupsfilters, universal: Added the universal() filter
	  function which allows a single CUPS filter executable which
	  auto-creates chains of filter function calls to convert any
	  input data format into any other output data format.So CUPS
	  can call a single filter for any conversion, taking up less
	  resources. Thanks to Pranshu Kharkwal for this excellent
	  GSoC project (Pull request #421).
	- Build system, README: Require CUPS 2.2.2+ and QPDF 10.3.2+.
	  Removed now unneeded ./configure switches for PCLm support
	  in QPDF and for use of the urftopdf filter for old CUPS
	  versions.
	- urftopdf: Removed as we require CUPS 2.2.2+ now which
	  supports Apple Raster nby itself.
	- libppd: Ported CUPS' PPD compiler into libppd. Now the
	  functions for PPD file collections also take driver
	  information files (*.drv) into account, allowing easy
	  retro-fit of ALL CUPS drivers. In addition, the API of CUPS'
	  PPD compiler is available (ppd/ppdc.h) and everything stays
	  available when CUPS drops PPD support.
	- libcupsfilters: Make cupsRasterParseIPPOptions() work
	  correctly together with PPDs, by not parsing options
	  which are in the printer's PPD and using
	  ppdRasterInterpretPPD() when set_defaults = 1 is set.
	  Without PPD the function behaves as before.
	- libcupsfilters: Let the ieee1284NormalizeMakeAndModel()
	  function Clean up "Kodak" manufacturer name, as it is
	  sometimes reported as "Eastman Kodak Company".
	- libcupsfilters, texttotext: Moved core functionality of
	  texttotext into the texttotext() filter function (Pull
	  request #425).
	- libcupsfilters: Let colord_get_profile_for_device_id() not
	  return empty file name, to avoid error messages in CUPS
	  error_log.
	- foomatic-rip: Debug message was wrongly sent to stdout and
	  not to log (Issue #422).